--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/emilyresch/project2#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "mysql": "^2.18.1",
-    "sequelize": "^5.21.7"
+    "mysql2": "^2.1.0",
+    "sequelize": "^5.21.7",
+    "sequelize-cli": "^5.5.1"
   }
 }
