--- a/config/config.json
+++ b/config/config.json
@@ -19,7 +19,7 @@
     "username": "root",
     "password": null,
     "database": "database_production",
-    "host": "127.0.0.1",
+    "host": "process.env.host",
     "dialect": "mysql",
     "operatorsAliases": false
   }
