added api call and response details to the router and handlebar

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@material/data-table": "^6.0.0",
     "@material/textfield": "^6.0.0",
     "@material/top-app-bar": "^6.0.0",
+    "axios": "^0.19.2",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
     "material-components-web": "^6.0.0",
