--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "express-handlebars": "^4.0.4",
     "material-components-web": "^6.0.0",
     "mysql2": "^2.1.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "sequelize": "^5.21.7",
     "sequelize-cli": "^5.5.1"
   }
