--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
+    "express-session": "^1.17.1",
     "material-components-web": "^6.0.0",
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
