--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "passport-local": "^1.0.0",
     "sequelize": "^5.21.7",
     "sequelize-cli": "^5.5.1"
+  },
+  "devDependencies": {
+    "handlebars": "^4.5.0"
   }
 }
